Data deprecation & metadata stale (#1399)
Co-authored-by: nikitadementev <ironic.cosmos@gmail.com>
Co-authored-by: alexeykozyurov <akozyurov@provectus.com>